--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -32,6 +32,8 @@
 	align-content: center;
 	margin-top: 10rem;
 	margin-left: 10rem;
+	position: relative;
+	top:-9rem;
 }
 
 .caller {
@@ -39,7 +41,7 @@
 	color: #fff;
 }
 
-body {
+.bod {
 	background: #4776e6; /* fallback for old browsers */
 	background: -webkit-linear-gradient(to right, #8e54e9, #4776e6); /* Chrome 10-25, Safari 5.1-6 */
 	background: linear-gradient(
@@ -47,4 +49,7 @@ body {
 		#8e54e9,
 		#4776e6
 	); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	height: 100vh;
+
+	margin-top: -22px;
 }
